--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -7,7 +7,20 @@ on:
 jobs:
     build:
         runs-on: ubuntu-latest
-        steps: 
-          - name: Checkout code
-            uses: actions/checkout@v3
+        steps:
+            - name: Checkout code
+              uses: actions/checkout@v3
 
+            - name: Setup java
+              uses: actions/setup-java@v3
+              with:
+                  distribution: "temruin"
+                  java-version: "17"
+            - name: Build project
+              run: mvn clean install -DskipTests
+            - name: Login Docker Hub
+              run: docker login -U ${{secrets.DOCKER_USERNAME}} -p ${{secrets.DOCKER_PASSWORD}}
+            - name: Build docker image
+              run: docker build -t duardohm/deploy-nassau-pro .
+            - name: Push image docker
+              run: docker push duardohm/deploy-nassau-pro
