--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	</parent>
 	<groupId>com.nassaupro</groupId>
 	<artifactId>NassauPro</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<name>NassauPro</name>
 	<description>Projeto NassauPro</description>
 	<properties>
