--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -14,7 +14,7 @@ jobs:
             - name: Setup java
               uses: actions/setup-java@v3
               with:
-                  distribution: "temruin"
+                  distribution: "temurin"
                   java-version: "17"
             - name: Build project
               run: mvn clean install -DskipTests
