--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -24,3 +24,13 @@ jobs:
               run: docker build -t duardohm/deploy-nassau-pro .
             - name: Push image docker
               run: docker push duardohm/deploy-nassau-pro
+
+    deploy:
+      needs: build
+      runs-on: self-hosted
+      steps:
+      - name: Pull image from docker hub
+        run: docker pull duardohm/deploy-nassau-pro
+      - name: Run docker container
+        run: docker run -d -p 8080:8080 --name deploy-nassau-pro:latest
+        
