--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -32,4 +32,4 @@ jobs:
             - name: Pull image from docker hub
               run: docker pull duardohm/deploy-nassau-pro
             - name: Run docker container
-              run: docker run -d -p 8080:8080 --name deploy-nassau-pro duardohm/deploy-nassau-pro
+              run: docker run -d -p 8080:8080 -e DATABASE_USERNAME=${{secrets.DATABASE_USERNAME}} -e DATABASE_PASSWORD='${{secrets.DATABASE_PASSWORD}}' -e DATABASE_URL=${{secrets.DATABASE_URL}} --name deploy-nassau-pro duardohm/deploy-nassau-pro:latest
