--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,9 +19,9 @@
 #spring.jpa.show-sql=true
 
 # PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/nassaupro
-spring.datasource.username=postgres
-spring.datasource.password=rootdb
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA PostgreSQL
