Deploy main to production

--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -2,7 +2,7 @@ name: Deploy Application NassauPro
 
 on:
     push:
-        branches: [main]
+        branches: [main, production]
 
 jobs:
     build:
