Corrigindo Token do github

--- a/.github/workflows/mirror-main-to-production.yml
+++ b/.github/workflows/mirror-main-to-production.yml
@@ -20,7 +20,7 @@ jobs:
 
             - name: Mirror main to production
               env:
-                  GITHUB_TOKEN: ${{ secrets.TOKEN_GITHUB }}
+                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
               run: |
                   git checkout main
                   git push origin main:production --force
