--- a/.github/workflows/mirror-main-to-production.yml
+++ b/.github/workflows/mirror-main-to-production.yml
@@ -11,16 +11,20 @@ jobs:
 
         steps:
             - name: Checkout repository
-              uses: actions/checkout@v3
+              uses: actions/checkout@v2
 
             - name: Set up Git
               run: |
                   git config --global user.name 'github-actions[bot]'
                   git config --global user.email 'github-actions[bot]@users.noreply.github.com'
 
-            - name: Mirror main to production
+            - name: Configure remote
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+              run: |
+                  git remote set-url origin https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }}.git
+
+            - name: Mirror main to production
               run: |
                   git checkout main
                   git push origin main:production --force
